Implement the webgl code which draws a triangle

--- a/samples/index.html
+++ b/samples/index.html
@@ -4,5 +4,6 @@
   <script type="module" src="./main.js"></script>
 </head>
 <body>
+  <canvas id="world" width="512" height="512"></canvas>
 </body>
 </html>
